Fix: Landing page
Fixed the issue with button showing wrong colour on hover, and the particle effect not showing up at all.

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,4 +1,3 @@
 .btn {
   margin-top: 20%;
-  background-color: $secondary-colour;
 }
